amelioration de la partie professionnelle

--- a/index.html
+++ b/index.html
@@ -73,16 +73,7 @@
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
 	          	<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png); margin-top: 30px;">
 	          		<div class="overlay"></div>
-	          	</div>
-				  <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax="properties: { translateY: '70%' }">
-					<div class="text">
-					  <span class="subheading">Hello!</span>
-					  <h1 class="mb-4 mt-3">I am a <span>DevOps Engineer</span> based in Lyon</h1>
-					  <h2 class="mb-4">Transforming Ideas into Reality</h2>
-					  <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">Explore my works</a></p>
-					</div>
-		          </div>
-	        	</div>
+
 	        </div>
 	      </div>
 	    </div>
@@ -103,12 +94,15 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">À propos de Moi</h2>
-		            <p>En tant qu’administrateur système DevOps, je suis animé par la passion de l'automatisation de l'infrastructure, 
-						la mise en place de pipelines CI/CD et la supervision proactive des services. Expert en outils d'Infrastructure as Code, 
-						en conteneurisation et en monitoring, je veille à garantir la fiabilité, la scalabilité et la sécurité des environnements que je déploie. 
+		            <p>
+						En tant qu’administrateur système DevOps, je suis animé par la passion pour l'automatisation de l'infrastructure, 
+						la mise en place de pipelines CI/CD et la supervision proactive des services. Expert en outils d'Infrastructure as Code,
+						 conteneurisation et monitoring, je veille à garantir la fiabilité, la scalabilité et la sécurité des environnements que je déploie.
+					</p>
 						Mon approche axée sur les résultats me permet d’optimiser les processus tout en assurant une expérience utilisateur fluide et performante. 
 						Toujours en quête d’innovation, je m’investis dans la veille technologique pour explorer de nouvelles solutions qui renforcent 
-						l'efficacité et favorisent la collaboration au sein des équipes avec lesquelles je travaille.</p>
+						l'efficacité et favorisent la collaboration au sein des équipes avec lesquelles je travaille.
+					</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Nom:</span> <span>El Mahdi BENKHIDER</span></li>
 		            	<li class="d-flex"><span>Addresse:</span> <span>Lyon Rhone Alpes  69003 FRANCE</span></li>
@@ -148,19 +142,33 @@
     					<span class="date">MAi 2022-Novembre 2023</span>
     					<h2>Administrateur Système DevOps</h2>
     					<span class="position">Simplon By Microsoft Villeurbanne</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">
+							Au cours de ma formation en tant qu'Administrateur Système DevOps, j'ai acquis des compétences essentielles en gestion des systèmes et en intégration continue. 
+							Ce programme m'a permis de maîtriser les outils et les pratiques nécessaires pour automatiser les processus de développement et d'exploitation :
+						</p>
+						<h>Compétences Développées :</h>
+						<ul>
+							<li><strong>Automatisation des déploiements :</strong> Mise en œuvre de pipelines CI/CD pour assurer des livraisons rapides et sécurisées.</li>
+							<li><strong>Gestion de l'infrastructure :</strong> Utilisation d'outils comme Docker et Kubernetes pour orchestrer des environnements conteneurisés.</li>
+							<li><strong>Surveillance des performances :</strong> Implémentation de solutions de monitoring pour anticiper et résoudre rapidement les problèmes.</li>
+							<li><strong>Collaboration inter-équipes :</strong> Travail en étroite collaboration avec les développeurs pour optimiser les processus de développement et d'exploitation.</li>
+						</ul>
+						<p>
+							Cette formation m'a préparé à relever les défis du monde DevOps, 
+							où la collaboration entre les équipes de développement et d'exploitation est essentielle pour garantir la qualité et la rapidité des livraisons.
+						</p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
     					<span class="date">2015-2016</span>
     					<h2>Vieillissement société, technologie</h2>
     					<span class="position">Université Grenoble Alpes</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4"></p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
     					<span class="date">2013-2015</span>
     					<h2>Master en Sociologie de Travail et des Ressources Humaines</h2>
     					<span class="position">Université de BEJAIA Algerie</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4"></p>
     				</div>
 
     			</div>
@@ -169,12 +177,23 @@
     				<div class="Expériences-wrap ftco-animate">
     					<span class="date">Novembre 2022 - Novembre 2023</span>
     					<h2>Administrateur Cloud DevOps</h2>
-    					<span class="position">Sopht, Villeurbanne</span>
-    					<p class="mt-4">Au cours de mon alternance chez Sopht, j'ai optimisé et automatisé les processus de développement et de déploiement. 
-							J'ai mis en place SonarQube pour l'analyse statique du code, améliorant ainsi la qualité du code. 
-							J'ai déployé Unleash pour des déploiements progressifs, facilitant l'intégration continue et la gestion des risques. 
-							J'ai également installé GLPI pour la gestion des ressources et Jorani pour le suivi des absences. 
-							De plus, j'ai préparé un environnement de test pour l'Agent avant son déploiement chez les clients. 
+    					<span class="position">Sopht, Lyon</span>
+    					<p class="mt-4">Au cours de mon alternance chez Sopht, j'ai joué un rôle clé dans l'optimisation et l'automatisation des processus 
+							de développement et de déploiement. Voici quelques-unes de mes contributions : 
+
+							
+						<ul>
+							<li><strong>mis en place SonarQube :</strong> Réalisé pour l'analyse statique du code, ce qui a permis d'améliorer significativement la qualité du code.</li>
+							<li><strong>Implémentation d'Unleash:</strong> Facilite les déploiements progressifs, améliorant ainsi l'intégration continue et la gestion des risques. </li>
+							<li><strong>Déploiement de GLPI:</strong> Outil de gestion des ressources, améliorant l'efficacité opérationnelle.</li>
+							<li><strong>Intégration de Jorani :</strong> Pour le suivi des absences, contribuant à une meilleure gestion des équipes.</li>
+							<li><strong>préparé un environnement de test:</strong> Pour évaluer l'Agent avant de le déployer
+								auprès des clients, afin de s'assurer de son bon fonctionnement. </li>
+							<li><strong>deploiement de deux applications en production :</strong> Réalisé à l’aide d’Azure DevOps et de déploiement continu.</li>
+						</ul>
+					</p>
+						<h>stack technique :</h>
+					</p>
 							Mon travail a reposé sur une stack technique variée, incluant Terraform, Ansible, Bash, Azure DevOps, Docker, Git, MySQL, PostgreSQL, 
 							ainsi que des services cloud Microsoft Azure et Scaleway.</p>
     				</div>
@@ -182,7 +201,14 @@
 						<span class="date">2017-2022</span>
 						<h2>Travailleur indépendant</h2>
 						<span class="position">Villeurbanne</span>
-    					<p class="mt-4">A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
+    					<p class="mt-4">En tant que travailleur indépendant, j'ai acquis une solide expérience dans plusieurs domaines, 
+							notamment le nettoyage de fin de chantier, l'installation de fibre optique et la sécurité incendie. 
+						</p>
+							Mon autonomie m'a permis de gérer efficacement des missions variées, en adaptant mes services aux besoins spécifiques de chaque client. 
+							J'assume pleinement la responsabilité de mes missions, ce qui m'a permis de garantir un haut niveau de qualité et de satisfaction. 
+						</p>
+							Cette expérience m'a également permis de développer des compétences en communication, 
+							essentielles pour établir des relations de confiance et assurer la réussite des missions.</p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
 						<span class="date">2011-2015</span>
@@ -191,6 +217,7 @@
     					<p class="mt-4">En tant que gérant d'un magasin de vente et de maintenance informatique, 
 							j'ai supervisé les opérations, de l'installation de logiciels à la maintenance des systèmes. 
 							J'ai développé des compétences analytiques pour diagnostiquer rapidement les problèmes techniques et proposer des solutions efficaces. 
+						</p>
 							Mon rôle m'a permis d'interagir directement avec les clients, offrant un service personnalisé et répondant à leurs besoins. 
 							Cette expérience a renforcé mon autonomie tout en garantissant un service clientèle de qualité.</p>
     				</div>
@@ -265,39 +292,6 @@
 						</div>
 					</div>
 
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>HTML5</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-3" role="progressbar" aria-valuenow="95"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:95%">
-							    <span>95%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>CSS3</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-4" role="progressbar" aria-valuenow="90"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:90%">
-							    <span>90%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-md-6 animate-box">
-						<div class="progress-wrap ftco-animate">
-							<h3>WordPress</h3>
-							<div class="progress">
-							 	<div class="progress-bar color-5" role="progressbar" aria-valuenow="70"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
-							    <span>70%</span>
-							  	</div>
-							</div>
-						</div>
-					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
 							<h3>Docker</h3>
@@ -454,7 +448,7 @@
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">projets</h1>
             <h2 class="mb-4">Mes projets</h2>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+            <p></p>
           </div>
         </div>
     		<div class="row">
