ajouter des competences et modifier parite professionnelle

--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
     					<span class="date">2015-2016</span>
     					<h2>Vieillissement société, technologie</h2>
     					<span class="position">Université Grenoble Alpes</span>
-    					<p class="mt-4"></p>
+    					<p class="mt-4">cette formation m'a permis d'acquérir une compréhension approfondie des enjeux liés au vieillissement de la population. 
+							J'y ai exploré les dynamiques sociales influençant le bien-être des seniors. 
+							Cette expérience m'a préparé à analyser les défis associés à cette thématique.</p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
     					<span class="date">2013-2015</span>
@@ -178,8 +180,8 @@
     					<span class="date">Novembre 2022 - Novembre 2023</span>
     					<h2>Administrateur Cloud DevOps</h2>
     					<span class="position">Sopht, Lyon</span>
-    					<p class="mt-4">Au cours de mon alternance chez Sopht, j'ai joué un rôle clé dans l'optimisation et l'automatisation des processus 
-							de développement et de déploiement. Voici quelques-unes de mes contributions : 
+    					<p class="mt-4">En tant qu'Administrateur Cloud DevOps chez Sopht, j'ai joué un rôle central
+							 dans l'optimisation des processus DevOps et l'amélioration de l'infrastructure cloud. Mes principales réalisations incluent:
 
 							
 						<ul>
@@ -208,8 +210,8 @@
 							Mon autonomie m'a permis de gérer efficacement des missions variées, en adaptant mes services aux besoins spécifiques de chaque client. 
 							J'assume pleinement la responsabilité de mes missions, ce qui m'a permis de garantir un haut niveau de qualité et de satisfaction. 
 						</p>
-							Cette expérience m'a également permis de développer des compétences en communication, 
-							essentielles pour établir des relations de confiance et assurer la réussite des missions.</p>
+						Cette expérience m'a permis de développer une grande adaptabilité, une rigueur dans l'exécution des tâches et une capacité à travailler 
+						efficacement de manière autonome tout en maintenant d'excellentes relations avec les clients et les partenaires.</p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
 						<span class="date">2011-2015</span>
@@ -219,8 +221,9 @@
 							j'ai supervisé les opérations, de l'installation de logiciels à la maintenance des systèmes. 
 							J'ai développé des compétences analytiques pour diagnostiquer rapidement les problèmes techniques et proposer des solutions efficaces. 
 						</p>
-							Mon rôle m'a permis d'interagir directement avec les clients, offrant un service personnalisé et répondant à leurs besoins. 
-							Cette expérience a renforcé mon autonomie tout en garantissant un service clientèle de qualité.</p>
+							Cette expérience m'a permis de combiner mes compétences techniques, managériales et relationnelles, renforçant ma capacité 
+							à gérer efficacement un commerce de détail spécialisé dans un secteur technologique en constante évolution.
+						.</p>
     				</div>
     			</div>
     		</div>
@@ -341,6 +344,17 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
+							<h3>Azure</h3>
+							<div class="progress">
+								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+									 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									<span>90%</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
 							<h3>Linux</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
@@ -399,7 +413,7 @@
 							<h3>SonarQube</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-									 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									 aria-valuemin="0" aria-valuemax="100" style="width:70%">
 									<span>70%</span>
 								</div>
 							</div>
@@ -410,7 +424,7 @@
 							<h3>SMTP</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-									 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									 aria-valuemin="0" aria-valuemax="100" style="width:8dvb">
 									<span>80%</span>
 								</div>
 							</div>
@@ -421,7 +435,7 @@
 							<h3>Monitoring</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-									 aria-valuemin="0" aria-valuemax="100" style="width:90%">
+									 aria-valuemin="0" aria-valuemax="100" style="width:70%">
 									<span>70%</span>
 								</div>
 							</div>
@@ -432,8 +446,8 @@
 							<h3>Ansible</h3>
 							<div class="progress">
 							 	<div class="progress-bar color-6" role="progressbar" aria-valuenow="80"
-							  	aria-valuemin="0" aria-valuemax="100" style="width:80%">
-							    <span>75%</span>
+							  	aria-valuemin="0" aria-valuemax="100" style="width:70%">
+							    <span>70%</span>
 							  	</div>
 							</div>
 						</div>
@@ -534,7 +548,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-map-signs"></span>
           		</div>
-          		<h3 class="mb-4">Address</h3>
+          		<h3 class="mb-4">Adresse</h3>
 	            <p>Lyon 69003</p>
 	          </div>
           </div>
@@ -543,7 +557,7 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-phone2"></span>
           		</div>
-          		<h3 class="mb-4">Contact Number</h3>
+          		<h3 class="mb-4">Numéro de contact</h3>
 	            <p><a href="tel://1234567920">+ 33 6 05 73 16 90</a></p>
 	          </div>
           </div>
@@ -552,42 +566,14 @@
           		<div class="icon d-flex align-items-center justify-content-center">
           			<span class="icon-paper-plane"></span>
           		</div>
-          		<h3 class="mb-4">Email Address</h3>
+          		<h3 class="mb-4">Adresse électronique</h3>
 	            <p><a href="mailto:info@yoursite.com">elmahdibenkhider@gmail.com</a></p>
 	          </div>
           </div>
 
         </div>
 
-        <div class="row no-gutters block-9">
-          <div class="col-md-6 order-md-last d-flex">
-            <form action="https://formsubmit.co/elmahdibenkhider@gmail.com" method="POST">
-              <div class="form-group">
-                <input type="text" name="name" class="form-control" placeholder="Your Name">
-              </div>
-              <div class="form-group">
-                <input type="text" name="email" class="form-control" placeholder="Your Email">
-              </div>
-              <div class="form-group">
-                <input type="text" name="subject" class="form-control" placeholder="Subject">
-              </div>
-              <div class="form-group">
-                <textarea name="message"  id="" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
-              </div>
-              <div class="form-group">
-                <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
-              </div>
-            </form>
-          
-          </div>
-
-          <div class="col-md-6 d-flex">
-          	<div class="img" style="background-image: url(images/about.jpg); margin-top: -70px;"></div>
-          </div>
-        </div>
-      </div>
-    </section>
-		
+  
 
 	<footer class="ftco-footer ftco-section">
 		<div class="container">
