--- a/index.html
+++ b/index.html
@@ -60,13 +60,31 @@
 		          		<span class="subheading">Bonjour!</span>
 			            <h1 class="mb-4 mt-3">Je m'appel <span>El Mahdi BENKHIDER</span></h1>
 			            <h2 class="mb-4">Ingénieur DevOps Passionné</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Embauchez-moi</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">Découvrez mon travail</a></p>
+			            <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Me contacter</a> <a href="#projets-section" class="btn btn-white btn-outline-white py-3 px-4">Découvrez mon travail</a></p>
 		            </div>
 		          </div>
 	        	</div>
 	        </div>
 	      </div>
-
+	      <div class="slider-item">
+			<div class="overlay"></div>
+		  <div class="container">
+			<div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
+				<div class="one-third js-fullheight order-md-last img" style="background-image:url(images/bg_1.png);">
+					<div class="overlay"></div>
+				</div>
+				<div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
+					<div class="text">
+						<span class="subheading">Bonjour!</span>
+					  <h1 class="mb-4 mt-3">Je suis <span>Ingénieur DevOps</span> basé à Lyon</h1>
+					  <p><a href="#contact-section" class="btn btn-primary py-3 px-4">Me contacter</a> <a href="#projets-section" class="btn btn-white btn-outline-white py-3 px-4">Découvrez mon travail</a></p>
+				  </div>
+				</div>
+			  </div>
+		  </div>
+		</div>
+	  </div>
+  </section>
 	      <div class="slider-item">
 	      	<div class="overlay"></div>
 	        <div class="container">
@@ -124,7 +142,7 @@
 	                <span class="number" data-number="10">0</span>
 	                <span>Projets complets</span>
                 </p>
-                <p><a href="#" class="btn btn-primary py-3 px-3">Download CV</a></p>
+                <p><a href="./El Mahdi_Benkhider.pdf" class="btn btn-primary py-3 px-3" target="_blank" >Download CV</a></p>
               </div>
 	          </div>
 	        </div>
@@ -170,13 +188,18 @@
     					<span class="position">Université Grenoble Alpes</span>
     					<p class="mt-4">cette formation m'a permis d'acquérir une compréhension approfondie des enjeux liés au vieillissement de la population. 
 							J'y ai exploré les dynamiques sociales influençant le bien-être des seniors. 
-							Cette expérience m'a préparé à analyser les défis associés à cette thématique.</p>
+						</p>Cette expérience m'a préparé à analyser les défis associés à cette thématique.</p>
     				</div>
     				<div class="Expériences-wrap ftco-animate">
     					<span class="date">2013-2015</span>
     					<h2>Master en Sociologie de Travail et des Ressources Humaines</h2>
     					<span class="position">Université de BEJAIA Algerie</span>
-    					<p class="mt-4"></p>
+    					<p class="mt-4">Dans le cadre de cette formation, 
+							j'ai acquis une solide compréhension des dynamiques sociales au sein des organisations. Cette spécialité m'a permis d'explorer 
+							les interactions entre individus, 
+							groupes et structures, ainsi que d'analyser les enjeux liés à la gestion du travail et à l'organisation des équipes. 
+						</p>J'ai également développé des compétences en analyse critique, 
+							en recherche qualitative et quantitative, ainsi qu'en mise en œuvre de solutions adaptées aux défis organisationnels contemporains.</p>
     				</div>
 
     			</div>
@@ -235,7 +258,7 @@
     		</div>
     		<div class="row justify-content-center mt-5">
     			<div class="col-md-6 text-center ftco-animate">
-    				<p><a href="#" class="btn btn-primary py-4 px-5">Download CV</a></p>
+    				<p><a href="./El Mahdi_Benkhider.pdf" class="btn btn-primary py-3 px-3" target="_blank" >Download CV</a></p>
     			</div>
     		</div>
     	</div>
@@ -348,6 +371,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
 							<h3>Azure</h3>
@@ -405,6 +429,17 @@
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
+							<h3>github</h3>
+							<div class="progress">
+								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
+									 aria-valuemin="0" aria-valuemax="100" style="width:70%">
+									<span>70%</span>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-6 animate-box">
+						<div class="progress-wrap ftco-animate">
 							<h3>Powershell</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
@@ -430,15 +465,15 @@
 							<h3>SMTP</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
-									 aria-valuemin="0" aria-valuemax="100" style="width:8dvb">
-									<span>80%</span>
+									 aria-valuemin="0" aria-valuemax="100" style="width:70%">
+									<span>70%</span>
 								</div>
 							</div>
 						</div>
 					</div>
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
-							<h3>Monitoring</h3>
+							<h3>Supervision & Monitoring</h3>
 							<div class="progress">
 								<div class="progress-bar color-4" role="progressbar" aria-valuenow="70"
 									 aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -447,6 +482,7 @@
 							</div>
 						</div>
 					</div>
+
 					<div class="col-md-6 animate-box">
 						<div class="progress-wrap ftco-animate">
 							<h3>Ansible</h3>
