ajouter une experience pro

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
 
     			<div class="col-md-6">
 					<div class="Expériences-wrap ftco-animate">
-						<span class="date">Janvier 2024 - Septembre 2024</span>
+						<span class="date">2024</span>
 						<h2>ingenieur DevOps</h2>
 						<span class="position">Formation et Projets Personnels</span>
 						<p class="mt-4">En 2024, j'ai consacré mon temps à un développement personnel intensif dans le domaine du DevOps. 
