--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
 					</div>
 					<!-- Nouvelle certification ajoutée -->
 					<div class="col-md-4 text-center d-flex ftco-animate">
-						<a href="https://www.credly.com/badges/03574fbb-fdde-4f0a-b18d-7ed17c1e784e" target="_blank" class="Certifications-1" style="background-image: url(images/images-github.jpeg); background-size: contain; background-repeat: no-repeat; background-position: center; display: block; height: 200px; width: 100%;">
+						<a href="https://www.credly.com/badges/03574fbb-fdde-4f0a-b18d-7ed17c1e784e" target="_blank" class="Certifications-1" style="background-image: url(images/github.png); background-size: contain; background-repeat: no-repeat; background-position: center; display: block; height: 200px; width: 100%;">
 							<span class="icon" style="display: none;">
 								<i class="flaticon-new-icon"></i>
 							</span>
